Primary and secondary nav-bars react correctly on small screens

--- a/source/styles/components/responsive-nav.scss
+++ b/source/styles/components/responsive-nav.scss
@@ -1,65 +1,69 @@
 @media screen and (min-width:1200px)
 {
-    #nav-button,
-    #site-wrapper,
-    #site-canvas,
-    #site-menu
+    .nav-bar__item--lg-hide,
+    .site-header__logo
     {
         display: none;
     }
 }
 @media screen and (max-width:1200px)
 {
-nav.nav-bar, nav.nav-bar--secondary, nav.nav-bar, nav.nav-bar--primary
+    .nav-bar__item:not(.nav-bar__item--lg-hide),
+    .nav-bar.nav-bar--secondary
     {
         display: none;
     }
+    .nav-bar__item.nav-bar__item--sm-show,
+    .site-header__logo
+    {
+        display: inline-block;
+    }
 }
 
-#nav-button
-{
-    color: #ffed42;
-    border-color: #2a6bb0;
-    background-color: #2a6bb0;
-}
-#site-wrapper
-{
-    position: relative;
-
-    overflow: hidden;
-
-    width: 100%;
-    height: 800px; /* Temp: Simulates a tall page. */
-}
-#site-canvas
-{
-    position: relative;
-
-    width: 100%;
-    height: 100%;
-    /*
-    padding: 5% 0; /* Temp: Just spacing.
-    */
-
-    -webkit-transition: .3s ease all;
-            transition: .3s ease all;
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-}
-#site-menu
-{
-    position: absolute;
-    top: 0;
-    left: -300px;
-
-    width: 300px;
-    height: 100%;
-    padding: 15px;
-
-    background-color: #2a6bb0;
-}
-#site-wrapper.show-nav #site-canvas
-{
-    -webkit-transform: translateX(300px);
-            transform: translateX(300px);
-}
+// #nav-button
+// {
+//     color: #ffed42;
+//     border-color: #2a6bb0;
+//     background-color: #2a6bb0;
+// }
+// #site-wrapper
+// {
+//     position: relative;
+//
+//     overflow: hidden;
+//
+//     width: 100%;
+//     height: 800px; /* Temp: Simulates a tall page. */
+// }
+// #site-canvas
+// {
+//     position: relative;
+//
+//     width: 100%;
+//     height: 100%;
+//     /*
+//     padding: 5% 0; /* Temp: Just spacing.
+//     */
+//
+//     -webkit-transition: .3s ease all;
+//             transition: .3s ease all;
+//     -webkit-transform: translateX(0);
+//             transform: translateX(0);
+// }
+// #site-menu
+// {
+//     position: absolute;
+//     top: 0;
+//     left: -300px;
+//
+//     width: 300px;
+//     height: 100%;
+//     padding: 15px;
+//
+//     background-color: #2a6bb0;
+// }
+// #site-wrapper.show-nav #site-canvas
+// {
+//     -webkit-transform: translateX(300px);
+//             transform: translateX(300px);
+// }
